# hb-candles-feed

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  .taskmasterconfig  404.html  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  FindCython.cmake  MANIFEST.in  MOCK_SERVER_IMPLEMENTATION.md  MOCK_SERVER_SAMPLE_CODE.md  README.md  SECURITY.md  STANDALONE_GUIDE.md  TESTING.md  cython_builder.py  debug_test.py  index.html  mkdocs.saved.yml  mkdocs.yml  objects.inv  package.json  pyproject-hatch.toml  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  setup-dev-env.sh  setup.py  task8_validation.py  task9_validation.py  test_sequence_debug.py
.aider/: chat_history.md
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  dependabot.yml  deployment-config.yml  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  documentation.yml  feature_request.yml
.github/workflows/: ci.yml  deploy.yml  gh-deploy.yml  load-testing.yml  project-automation.yml  publish  publish.yml  release.yml  repository-insights.yml  security.yml
.github_temp/: CODEOWNERS  codecov.yml  pull_request_template.md
.github_temp/ISSUE_TEMPLATE/: bug_report.md
.github_temp/workflows/: publish.yml
adapters/implementation/: index.html
adapters/overview/: index.html
adapters/rest_api/: index.html
adapters/testing/: index.html
adapters/websocket/: index.html
api_reference/core/: index.html
candles_feed/: __init__.py  integration.py
candles_feed/adapters/: __init__.py  adapter_mixins.py  base_adapter.py  protocols.py
candles_feed/adapters/ascend_ex/: __init__.py  ascend_ex_spot_adapter.py  base_adapter.py  constants.py  spot_adapter.py
candles_feed/adapters/ascend_ex_spot/: __init__.py  ascend_ex_spot_adapter.py  constants.py
candles_feed/adapters/binance/: __init__.py  base_adapter.py  binance_base_adapter.py  binance_perpetual_adapter.py  binance_spot_adapter.py  constants.py  perpetual_adapter.py  spot_adapter.py
candles_feed/adapters/binance_perpetual/: __init__.py  binance_perpetual_adapter.py  constants.py
candles_feed/adapters/binance_spot/: __init__.py  binance_spot_adapter.py  constants.py
candles_feed/adapters/bybit/: __init__.py  base_adapter.py  bybit_base_adapter.py  bybit_perpetual_adapter.py  bybit_spot_adapter.py  constants.py  perpetual_adapter.py  spot_adapter.py
candles_feed/adapters/bybit_perpetual/: __init__.py  bybit_perpetual_adapter.py  constants.py
candles_feed/adapters/bybit_spot/: __init__.py  bybit_spot_adapter.py  constants.py
candles_feed/adapters/ccxt/: ccxt_base_adapter.py  ccxt_xxx_spot_adapter.py
candles_feed/adapters/coinbase_advanced_trade/: __init__.py  base_adapter.py  coinbase_advanced_trade_adapter.py  constants.py  spot_adapter.py
candles_feed/adapters/gate_io/: __init__.py  base_adapter.py  constants.py  gate_io_base_adapter.py  gate_io_perpetual_adapter.py  gate_io_spot_adapter.py  perpetual_adapter.py  spot_adapter.py
candles_feed/adapters/gate_io_perpetual/: __init__.py  (+2 more)
candles_feed/core/: __init__.py  candle_data.py  candles_feed.py  collection_strategies.py  data_processor.py  exchange_registry.py  github_metrics.py  hummingbot_network_client_adapter.py  metrics.py  monitoring.py  network_client.py  network_config.py  network_strategies.py  protocols.py  repository_insights.py
candles_feed/mocking_resources/: __init__.py  mocked_candle_feed_server.py
candles_feed/testing_resources/: README.md  __init__.py  candle_data_factory.py  mocked_candle_feed_server.py
candles_feed/utils/: __init__.py  profiling.py  time_utils.py
cmake/: FindCython.cmake  cython_builder.py
development/coding_standards/: index.html
docs/: index.md  mkdocs.yml  project_management.md
docs/adapters/: implementation.md  overview.md  rest_api.md  testing.md  websocket.md
docs/adr/: 0001-mkdocs-documentation-framework.md  template.md
docs/api_reference/: adapters.md  core.md  mocking.md
docs/development/: adapter_mixins.md  coding_standards.md  contributing.md  onboarding.md  release_management.md
docs/examples/: adapter_composition.md  binance_spot_example.md  hummingbot_integration.md  mock_server_example.md  simple_usage.md
docs/getting_started/: architecture.md  compatibility.md  hummingbot_integration.md  installation.md  migration_guide.md  quick_start.md  troubleshooting.md
docs/stylesheets/: extra.css
docs/testing_resources/: mock_server.md  overview.md
docs/testnet/: configuration.md  examples.md  implementation.md  overview.md
examples/: mock_server_example.py
examples/binance_spot_example/: index.html
examples/mock_server_example/: index.html
examples/simple_usage/: index.html
getting_started/architecture/: index.html
getting_started/installation/: index.html
getting_started/quick_start/: index.html
scripts/: coverage_analysis.py  documentation_check.py  quality_gates.py  repository_health_dashboard.py
search/: search_index.json
setup-tools/: README.md  candles-feed-env.yml  run_adapter_tests.py  run_tests_pycharm.py  setup-dev-env.sh  test_path_setup.py
setup-tools/hatch-hooks/: cython_build_hook.py
stylesheets/: extra.css
testing_resources/mock_server/: index.html
testing_resources/overview/: index.html
tests/: README.md  __init__.py  conftest.py  run_tests.sh
tests/e2e/: test_candles_feed_e2e.py  test_candles_feed_with_mock_adapters.py  test_end_to_end.py
tests/integration/: test_async_throttler_integration.py  test_candles_feed_integration.py  test_compatibility.py  test_enhanced_dependency_management.py  test_key_exchange_adapters.py  test_mock_adapters.py  test_mock_server.py  test_mock_server_with_aiohttp.py  test_network_config_integration.py  test_repository_health_dashboard.py  test_service_container_integration.py  test_testnet_support.py
tests/load/: locustfile.py  requirements.txt  test_load_scenarios.py
tests/mocks/: mock_exchange_server.py
tests/performance/: __init__.py  test_benchmarks.py  test_regression_benchmarks.py
tests/unit/: test_compatibility.py  test_hummingbot_integration.py
(+308 files in other folders)
