[build-system]
requires = [
    "hatchling>=1.18.0",
    "Cython>=3",
    "wheel>=0.37.0",
]
build-backend = "hatchling.build"

[project]
name = "hb-candles-feed"
version = "0.1.0"
description = "A Hummingbot candles-feed sub-package"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Hummingbot Contributors", email = "dev@hummingbot.io"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Cython",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    # Common dependencies
    "pandas>=1.0.0",
    "numpy>=1.20.0",
    "aiohttp>=3.8.0",
    "pydantic>=2",
]

[project.urls]
Homepage = "https://github.com/hummingbot/hummingbot"
Documentation = "https://github.com/hummingbot/hummingbot/tree/master/sub-packages/candles-feed/docs"
Repository = "https://github.com/hummingbot/hummingbot/tree/master/sub-packages/candles-feed"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "pytest-timeout>=2.1.0",
    "pyupgrade",
    "ruff>=0.1.5",
    "mypy>=1.5.1",
    "cython-lint>=0.15.0",
]
doc = [
    "mkdocs>=1.3.0",
    "mkdocs-material>=8.2.0",
    "mkdocstrings>=0.18.0",
]
hummingbot = [
    # Hummingbot-specific dependencies would go here
]

# Hatch configuration for conda environments
[tool.hatch.env]
requires = ["hatch-conda>=0.5.2"]
type = "conda"

# Default environment
[tool.hatch.envs.default]
conda-channels = ["conda-forge", "defaults"]
features = ["dev"]
dependencies = [
    # Core dependencies
    "aiohttp>=3.8.0",
    "pandas>=1.0.0",
    "python>=3.10",

    # Include project dependencies automatically
    "{root:dependencies}",

    # Development tools
    "cython>=3",
    "hatch>=1.9.0",
    "hatch-conda>=0.5.2",
    "wheel>=0.37.0",
]

# Pip dependencies with --no-deps flag
[tool.hatch.envs.default.pip-no-deps]
dependencies = []

# Scripts for the default environment
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-unit = "pytest tests/unit"
test-integration = "pytest tests/integration"
lint = "ruff check candles_feed tests"
format = "ruff format candles_feed tests"
typecheck = "mypy candles_feed"
lint-cython = "cython-lint candles_feed"
check = ["format", "lint", "typecheck", "test"]

# Documentation environment
[tool.hatch.envs.docs]
conda-channels = ["conda-forge", "defaults"]
features = ["doc"]
dependencies = [
    # Documentation-specific dependencies
    "mkdocs>=1.3.0",
    "mkdocs-material>=8.2.0",
    "mkdocstrings>=0.18.0",
]

# Documentation scripts
[tool.hatch.envs.docs.scripts]
build = "mkdocs build"
serve = "mkdocs serve"

# Hatch build configuration with Cython integration via custom hook
[tool.hatch.build.targets.wheel]
packages = ["candles_feed"]
build-hook = "setup-tools.hatch-hooks.cython_build_hook"

# Distribution package configuration
[tool.hatch.build.targets.sdist]
include = [
    "candles_feed/**/*.py",
    "candles_feed/**/*.pyx",
    "candles_feed/**/*.pxd",
    "docs/**/*.md",
    "docs/**/*.yml",
    "setup-tools/**/*",
    "LICENSE",
    "README.md",
    "pyproject.toml",
    "setup.py",
]
exclude = [
    "build", 
    "dist", 
    "**/__pycache__", 
    "**/*.pyc", 
    ".git", 
    ".github",
    "**/.pytest_cache",
    "**/.mypy_cache",
    "**/.DS_Store",
    "**/*.so",
    "**/*.dylib",
]

[tool.ruff]
target-version = "py38"
line-length = 100

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "W",   # pycodestyle warnings
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
]
ignore = [
    "E203",  # whitespace before ':'
    "E501",  # line too long - handled by formatter
    "F401",  # unused imports - we'll address these gradually
]
unfixable = ["F401"]  # unused imports - let the developer decide

[tool.ruff.lint.isort]
known-first-party = ["candles_feed"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
markers = [
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "e2e: marks tests as end-to-end tests",
    "asyncio: marks tests as asyncio tests",
]
log_cli = true
log_cli_level = "INFO"
